adjusted the html for the card - replaced p elements with li elements and reformatted the css associated with those items to clean up visibility.  In additon, updated JS for the revenu and earnings to include % and fix to two decimal points

--- a/style.css
+++ b/style.css
@@ -115,3 +115,14 @@ h5 {
 #newsMain{
     margin-bottom: 100px;
 }
+
+
+#YOY, #allEarnings, #allRevenue, #sharePrice, #yearHigh, #yearLow{
+    font-weight: bolder;
+
+}
+
+#allEarnings span, #allRevenue span, #sharePrice span, #yearHigh span, #yearLow span{
+    font-weight: normal;
+
+}
